lib_LIBRARIES = libcwmp.a
libcwmp_a_SOURCES = buffer.c  cfg.c  cwmp.c  http.c ssl.c  ini.c  log.c  md5.c  memory.c   session.c  util.c event.c queue.c model.c  callback.c


 
AM_CPPFLAGS = -DUSE_CWMP_MEMORY_POOL -I./  -I$(top_srcdir)/../../ -I$(top_srcdir)/../../linux/include/ -I$(top_srcdir)/../../libnvram/ -I$(top_srcdir)/../../libwive/ -I$(top_srcdir)/libcwmp/src/inc  -I$(top_srcdir)/libpool/include  -I$(top_srcdir)/libxmlet/include   -I$(top_srcdir)/libcwmp/include 






